# SARI-C

./: README.md
src/: CMakeLists.txt  sari.cpp
src/fe/: inter.cpp  inter.h  lexer.cpp  lexer.h  logic.cpp  logic.h  op.h  parser.cpp  parser.h  stmt.cpp  stmt.h  symbol.cpp  symbol.h  token.cpp  token.h
src/test/: example.txt  testlex.cpp
src/test/testlex/: CMakeLists.txt
src/test/testparser/: testparser.cpp
src/utils/: log.cpp  log.h
